--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -34,7 +34,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/about">About</a>
           <a class="dropdown-item" href="/howto">How To Use</a>
-          <a class="dropdown-item" href="/changelog">How To Changelog</a>
+          <a class="dropdown-item" href="/changelog">Changelog</a>
           <a class="dropdown-item" href="/resources">Resources</a>
           <a class="dropdown-item" href="https://discord.gg/EfExC7H">Discord Server</a>
         </div>
