--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -38,5 +38,6 @@
       {% include 'includes/_messages.html' %}
       {% block body %}{% endblock %}
     </div>
+    {% include 'includes/_footer.html' %}
   </body>
 </html>
