--- a/app/templates/includes/_messages.html
+++ b/app/templates/includes/_messages.html
@@ -1,15 +1,15 @@
 {% with messages = get_flashed_messages(with_categories=True) %}
   {% if messages %}
     {% for category, message in messages %}
-      <div style="z-index: -1" class="animated fadeInDown alert alert-{{category}}">{{message}}</div>
+      <div style="z-index: -1" class="animated fadeInDown fast alert alert-{{category}}">{{message}}</div>
     {% endfor %}
   {% endif %}
 {% endwith %}
 
 {% if error %}
-  <div style="z-index: -1" class="animated fadeInDown alert alert-danger">{{error}}</div>
+  <div style="z-index: -1" class="animated fadeInDown fast alert alert-danger">{{error}}</div>
 {% endif %}
 
 {% if msg %}
-  <div style="z-index: -1" class="animated fadeInDown alert alert-success">{{msg}}</div>
+  <div style="z-index: -1" class="animated fadeInDown fast alert alert-success">{{msg}}</div>
 {% endif %}
