--- a/app/static/main.css
+++ b/app/static/main.css
@@ -22,9 +22,17 @@ h3 {
 .content-section {
   background: #3a3a3a;
   padding: 10px;
-  border: 1px solid #232323;
   border-radius: 10px;
   margin-bottom: 20px;
+}
+
+.content-section:hover {
+  -webkit-transition: background-color 0.1s linear;
+  -moz-transition: background-color 0.1s linear;
+  -o-transition: background-color 0.1s linear;
+  -ms-transition: background-color 0.1s linear;
+  transition: background-color 0.1s linear;
+  background: #333333;
 }
 
 .article-title {
@@ -81,3 +89,34 @@ a.article-title:hover {
   width: 100%;
   background: #3a3a3a;
 }
+
+/* body {
+  background: linear-gradient(306deg, #171717, #112d4b);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 20s ease infinite;
+  -moz-animation: AnimationName 20s ease infinite;
+  -o-animation: AnimationName 20s ease infinite;
+  animation: AnimationName 20s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+   0%{background-position:0% 15%}
+   50%{background-position:100% 86%}
+   100%{background-position:0% 15%}
+}
+@-moz-keyframes AnimationName {
+   0%{background-position:0% 15%}
+   50%{background-position:100% 86%}
+   100%{background-position:0% 15%}
+}
+@-o-keyframes AnimationName {
+   0%{background-position:0% 15%}
+   50%{background-position:100% 86%}
+   100%{background-position:0% 15%}
+}
+@keyframes AnimationName {
+   0%{background-position:0% 15%}
+   50%{background-position:100% 86%}
+   100%{background-position:0% 15%}
+} */
