--- a/app/static/main.css
+++ b/app/static/main.css
@@ -114,3 +114,12 @@ body {
    50%{background-position:100% 92%}
    100%{background-position:0% 9%}
 }
+
+.transition-fade {
+  transition: 0.4s;
+  opacity: 1;
+}
+
+html.is-animating .transition-fade {
+  opacity: 0;
+}
