--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -35,10 +35,16 @@
   </head>
   <body>
     {% include 'includes/_navbar.html' %}
-    <div class="container animbg" style="padding: 20px">
-      {% include 'includes/_messages.html' %}
-      {% block body %}{% endblock %}
-    </div>
+    <main id="swup" class="transition-fade">
+      <div class="container animbg" style="padding: 20px">
+        {% include 'includes/_messages.html' %}
+        {% block body %}{% endblock %}
+      </div>
+    </main>
     {% include 'includes/_footer.html' %}
+    <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
+    <script type="text/javascript">
+      const swup = new Swup();
+    </script>
   </body>
 </html>
