--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -25,6 +25,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/search">Individual Songs</a>
+          <a class="dropdown-item" href="/leaderboard/total">Total Score</a>
         </div>
       </li>
       <li class="nav-item dropdown">
