Singles and Doubles leaderboards added!

--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -26,6 +26,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/search">Individual Songs</a>
           <a class="dropdown-item" href="/leaderboard/total">Total Score</a>
+          <a class="dropdown-item" href="/leaderboard/singles">Singles Score</a>
+          <a class="dropdown-item" href="/leaderboard/doubles">Doubles Score</a>
         </div>
       </li>
       <li class="nav-item dropdown">
