--- a/app/templates/ldb.html
+++ b/app/templates/ldb.html
@@ -20,7 +20,7 @@
   <hr />
   <div class="jumbotron text-center">
     <div class="animated fadeIn">
-      <h1 class="display-4">Total Score Leaderboard</h1>
+      <h1 class="display-4">{{ ldbtype }} Leaderboard</h1>
     </div>
     <hr />
     {% if scores != None %}
