--- a/app/static/main.css
+++ b/app/static/main.css
@@ -3,6 +3,14 @@ h1, h2, h3, h4, h5, h6, div, span, p{
   font-family: 'Montserrat';
 }
 
+#content-desktop {display: visible;}
+#content-mobile {display: none;}
+
+@media screen and (max-width: 768px) {
+  #content-desktop {display: none;}
+  #content-mobile {display: block;}
+}
+
 h1 {
   font-wight: 400;
 }
