Fixed embed for leaderboard pages

--- a/app/templates/ldb.html
+++ b/app/templates/ldb.html
@@ -3,7 +3,7 @@
   {% block head %}
     <title>Arrow Tracker</title>
     {% block meta %}
-      <meta property="og:title" content="Arrow Tracker: Song of the Week"/>
+      <meta property="og:title" content="Arrow Tracker: {{ ldbtype }} Leaderboard"/>
       <meta property="og:description" content="A handy score tracking utility for Pump it Up!"/>
       <meta property="og:url" content="https://arrowtracker.duckdns.org/">
       <meta name="theme-color" content="#99beea">
