--- a/app/templates/new_score.html
+++ b/app/templates/new_score.html
@@ -52,7 +52,7 @@
           <div class="col">
             <div>
               <label class="form-control-label" for="difficulty">Difficulty</label>
-              <a style="color: #4fbcf7" data-toggle="tooltip" data-placement="top" title="Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
+              <a style="color: #4fbcf7" data-toggle="tooltip" data-placement="top" title="Reload the page if scores don't update; Scroll to the bottom of the dropdown for Co-Op difficulties">[i]</a>
             </div>
             <select id="difficultyDropdown" class="form-control form-control-lg" name="diffDrop"></select>
           </div>
