--- a/app/templates/tournaments.html
+++ b/app/templates/tournaments.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 <head>
   {% block head %}
-    <title>About</title>
+    <title>Tournaments</title>
     {% block meta %}
       <meta property="og:title" content="Arrow Tracker: Join Tournament"/>
       <meta property="og:description" content="A handy score tracking utility for Pump it Up!"/>
