--- a/app/templates/weekly.html
+++ b/app/templates/weekly.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 <head>
   {% block head %}
-    <title>Arrow Tracker</title>
+    <title>Weekly Challenge</title>
     {% block meta %}
       <meta property="og:title" content="Arrow Tracker: Song of the Week"/>
       <meta property="og:description" content="A handy score tracking utility for Pump it Up!"/>
