--- a/app/templates/edit_tournament.html
+++ b/app/templates/edit_tournament.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 <head>
   {% block head %}
-    <title>Create Tournament</title>
+    <title>Edit Tournament</title>
     {% block meta %}
       <meta property="og:title" content="Arrow Tracker: Edit Tournament"/>
       <meta property="og:description" content="A handy score tracking utility for Pump it Up!"/>
