--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
   <img src="{{ url_for('static', filename='newlogo-arrow-smaller.png') }}" alt="Arrow Tracker" style="padding-right: 10pt">
   <a class="navbar-brand" href="/">Arrow Tracker</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarColor03">
+    <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item animated flash" style="padding-right: 5px">
         <a href="/post/new_score" class="btn btn-outline-success" role="button" aria-pressed="true">Submit Score</a>
