i really hope this doesn't screw everything over

--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -6,9 +6,10 @@
         <ul class="list-unstyled">
           <li>
             <p>Arrow Tracker is a score tracker for all Pump it Up mixes! Written and maintained <body>
-              by dj505, Beanfox, and more, Arrow Tracker aims to be a suitable replacement for the
-              leaderboard that died alongside Prime 2, as well as a personal score and achievement
-              tracker for completionists, casual players, and those who want to skill up alike!
+              by dj505 and Beanfox, and hosted by Concubidated, Arrow Tracker aims to be a suitable 
+              replacement for the leaderboard that died alongside Prime 2, as well as a personal 
+              score and achievement tracker for completionists, casual players, and those who want 
+              to skill up alike!
             </body></p>
           </li>
         </ul>
