--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -15,7 +15,7 @@
 <h1 style="padding: 10px">Search Results</h1>
 <div style="overflow: auto; max-width: 100%">
   {% set count = namespace(a=0) %}
-  <table class="table table-striped animated fadeIn">
+  <table class="table table-striped table-dark animated fadeIn">
     <th>Song</th>
     <th>Length</th>
     <th>Difficulty</th>
