--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -12,9 +12,12 @@
   {% endblock %}
 </head>
 {% block body %}
-<div style="z-index: -1;" class="animated fadeInDown fast">
-  <h1>{{ user.username }}'s Scores</h1>
-  <h4>{{ scores.total }} Scores</h4>
+<div class="media">
+  <img class="rounded-circle account-img" src="{{ user.image_file }}">
+  <div class="media-body">
+    <h2 class="account-heading">{{ user.username }}</h2>
+    <h4>{{ scores.total }} Scores</h4>
+  </div>
 </div>
   <hr class="my-4">
   {% set count = namespace(a=0) %}
