--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -13,7 +13,7 @@
 </head>
 {% block body %}
 <div class="media">
-  <img class="rounded-circle account-img" src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}">
+  <img class="rounded-circle account-img" src="{{ url_for('static', filename='profile_pics/' + user.image_file) }}">
   <div class="media-body">
     <h2 class="account-heading">{{ user.username }}</h2>
   </div>
