--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -41,17 +41,17 @@
           Recent Scores
         </h5>
         <div class="card-body">
-          <table class="table table-striped">
-          <th>Song</th>
-          <th>Score</th>
-          <th>Letter Grade</th>
-          {% for score in scores %}
-            <tr>
-              <td>{{ score.song }}</td>
-              <td>{{ score.score }}</td>
-              <td>{{ score.lettergrade.upper() }}</td>
-            </tr>
-          {% endfor %}
+          <table class="table table-striped table-dark">
+            <th>Song</th>
+            <th>Score</th>
+            <th>Letter Grade</th>
+            {% for score in scores %}
+              <tr>
+                <td>{{ score.song }}</td>
+                <td>{{ score.score }}</td>
+                <td>{{ score.lettergrade.upper() }}</td>
+              </tr>
+            {% endfor %}
           </table>
           <a href="/user/{{ user.username }}" class="btn btn-primary" role="button" aria-pressed="True">View All</a>
         </div>
