--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -20,6 +20,10 @@
 </div>
 <hr>
 <div class="jumbotron">
+  <div>
+    <h3>Profile</h3>
+  </div>
+  <hr>
   <div class="row">
     <div class="col-sm-6">
       <div class="card">
