--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -12,7 +12,7 @@
   {% endblock %}
 </head>
 {% block body %}
-<div class="media">
+<div class="media animated fadeInDown fast" style="z-index: -1">
   <img class="rounded-circle account-img" src="{{ user.image_file }}">
   <div class="media-body">
     <h2 class="account-heading">{{ user.username }}</h2>
