--- a/app/templates/user_posts.html
+++ b/app/templates/user_posts.html
@@ -13,7 +13,7 @@
 </head>
 {% block body %}
 <div class="media animated fadeInDown fast" style="z-index: -1">
-  <img class="rounded-circle account-img" src="{{ user.image_file }}">
+  <img class="rounded-circle account-img" src="{{ url_for('static', filename='profile_pics/' + user.image_file) }}">
   <div class="media-body">
     <h2 class="account-heading">{{ user.username }}</h2>
     <h4>{{ scores.total }} Scores</h4>
