--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -30,7 +30,7 @@
     <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="{{ url_for('users.user_posts', username=score.author.username) }}">{{ score.author.username }}</a>
+        <a class="mr-2" href="{{ url_for('users.user_page', username=score.author.username) }}">{{ score.author.username }}</a>
         <small class="text-muted">{{ score.date_posted.strftime('%Y-%m-%d') }}</small>
       </div>
       <div>
