--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -24,7 +24,7 @@
     {% for score in scores.items %}
       {% set count.a = count.a + 0.05 %}
       <article class="media content-section animated fadeInLeft fast fastBoxShadow" style="height: 100%; animation-delay: {{ count.a|float }}s;">
-        <img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img">
+        <a href="{{ url_for('users.user_page', username=score.author.username) }}"><img src="{{ url_for('static', filename='profile_pics/' + score.author.image_file) }}" class="rounded-circle article-img"></a>
         <div class="media-body">
           <h2>
             <div>
