Recent scores on profile now link to score pages

--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -51,7 +51,7 @@
             <th>Letter Grade</th>
             {% for score in scores %}
               <tr>
-                <td>{{ score.song }}</td>
+                <td><a href="{{ url_for('scores.score', score_id=score.id) }}">{{ score.song }}</a></td>
                 <td>{{ score.score }}</td>
                 <td>{{ score.lettergrade.upper() }}</td>
               </tr>
